<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignIn">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/HNG"
        android:layout_marginTop="0dp"
        android:paddingStart="@dimen/dp16"
        android:paddingEnd="@dimen/dp16"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_signin"
            style="@style/HNG"
            android:layout_marginTop="@dimen/dp32"
            android:layout_marginBottom="@dimen/dp32"
            android:text="@string/signin"
            android:textSize="@dimen/sp32"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/si_username"
            style="@style/HNG.EditText"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signin" />

        <EditText
            android:id="@+id/si_password"
            style="@style/HNG.EditText"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/si_username" />

        <Button
            android:id="@+id/btn_signin"
            style="@style/HNG.Button"
            android:background="@drawable/button"
            android:onClick="Login"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/si_password" />


        <TextView
            style="@style/HNG"
            android:id="@+id/tv_register"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            android:textSize="@dimen/sp18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>